# uai

./: .gitignore  CHANGELOG.md  README.md  __test_crewai.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.plan/: phase0.md  phase1.md  plan.md  technical_brief.md
examples/: __init__.py  crew_example.py  crewai_example.py  kosmos.toml  kosmos_callable.toml  langchain_example.py  langgraph_example.py  letta_example.py  nomos_example.py  simple_entrypoint.py
examples/crewai/: app.py  kosmos.toml
examples/crewai_custom_log_input_detection/: app.py
examples/crewai_user_input/: app.py
examples/crewai_with_artifacts/: app.py  blog_post.md
examples/crewai_with_logs/: app.py
examples/custom_adapter/: adapter.py  app.py
examples/langchain/: app.py  kosmos.toml
src/unified_agent_interface/: __init__.py  app.py  config.py  instrumentation.py  queue.py
src/unified_agent_interface/adapters/: __init__.py  base_adapter.py
src/unified_agent_interface/api/: chat.py  router.py  run.py
src/unified_agent_interface/components/agents/: base.py  chat_configured.py  chat_multi.py  configured.py  crewai_adapter.py  echo.py  registry.py  run_base.py  run_input_required.py  run_simple.py
src/unified_agent_interface/core/: __init__.py
src/unified_agent_interface/frameworks/: __init__.py  base.py  callable.py  crewai.py  langchain.py  utils.py
src/unified_agent_interface/models/: chat.py  run.py
tests/: conftest.py  test_chat_agents.py  test_crewai_integration.py  test_custom_adapter_integration.py  test_import.py  test_run_agents.py
(+2 files in other folders)
