[project]
name = "unified-agent-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chandralegend", email = "irugalbandarachandra@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
uai = "unified_agent_interface:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
