[project]
name = "unified-agent-interface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "chandralegend", email = "irugalbandarachandra@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "procrastinate>=3.5.1",
    "tomli>=2.2.1",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
uai = "unified_agent_interface:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
